--- a/src/public/app.html
+++ b/src/public/app.html
@@ -10,6 +10,7 @@
     <script src="js/socket.min.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/lang.js"></script>
+    <script src="js/cursor.js"></script>
 </head>
 <body style="background: #181818; overflow: hidden">
 <div class="left_tab">
